fix page login.html

--- a/login.html
+++ b/login.html
@@ -301,12 +301,12 @@
         <section class="page-section color">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6" style="float: right;">
                         <h3 class="block-title"><span>وارد شدن</span></h3>
                         <form action="#" class="form-login">
                             <div class="row">
                                 <div class="col-md-12 hello-text-wrap">
-                                    <span class="hello-text text-thin">سلام, به اکانت خودتان خوش آمدید</span>
+                                    <span class="hello-text text-thin" style="float: right;">سلام, به اکانت خودتان خوش آمدید</span>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>facebook</a>
@@ -315,20 +315,20 @@
                                     <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>twitter</a>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group"><input class="form-control" type="text" placeholder="نام کاربری یا ایمیل"></div>
+                                    <div class="form-group"><input class="form-control" type="text" placeholder="نام کاربری یا ایمیل" style="direction: rtl;"></div>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group"><input class="form-control" type="password" placeholder="رمز عبور"></div>
+                                    <div class="form-group"><input class="form-control" type="password" placeholder="رمز عبور" style="direction: rtl;"></div>
                                 </div>
-                                <div class="col-md-12 col-lg-6">
-                                    <div class="checkbox">
+                                <div class="col-md-12 col-lg-6 text-right-lg">
+                                    <a class="forgot-password" href="#" style="float: left;">آیا پسوردتان را فراموش کرده اید؟</a>
+                                </div>
+								<div class="col-md-12 col-lg-6">
+                                    <div class="checkbox" style="float: right;">
                                         <label><input type="checkbox"> مرا به خاطر بسپار</label>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-lg-6 text-right-lg">
-                                    <a class="forgot-password" href="#">آیا پسوردتان را فراموش کرده اید؟</a>
-                                </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6" style="float: right;">
                                     <a class="btn btn-theme btn-block btn-theme-dark" href="#">وارد شدن</a>
                                 </div>
                             </div>
@@ -339,11 +339,12 @@
                         <form action="#" class="create-account">
                             <div class="row">
                                 <div class="col-md-12 hello-text-wrap">
-                                    <span class="hello-text text-thin">ایجاد حساب برای شما در لورم ایپسوم</span>
+                                    <span class="hello-text text-thin" style="float: right;">ایجاد حساب برای شما در لورم ایپسوم</span>
                                 </div>
                                 <div class="col-md-12">
-                                    <h3 class="block-title">اگر امروز ثبت نام کنید شما میتوانید:</h3>
+                                    <p><h3 class="block-title">اگر امروز ثبت نام کنید شما میتوانید:</h3></p>
                                     <ul class="list-check">
+										<li>ssadasd</li>
                                         <li>سفارش خود را به صورت آنلاین چک کنید</li>
                                         <li>پیشنهادات داغ آماده را ببینید </li>
                                         <li>لیست علاقه مندی ها</li>
@@ -351,7 +352,7 @@
                                         <li>خرید سریع</li>
                                     </ul>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6" style="float: right;">
                                     <a class="btn btn-block btn-theme btn-theme-dark btn-create" href="#">ایجاد حساب</a>
                                 </div>
                             </div>
@@ -372,7 +373,7 @@
                                 <div class="pull-right"><i class="fa fa-gift"></i></div>
                                 <div class="media-body">
                                     <h4 class="media-heading">خرید 1 دریافت 1</h4>
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
+                                    پسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
@@ -383,7 +384,7 @@
                                 <div class="pull-right"><i class="fa fa-comments"></i></div>
                                 <div class="media-body">
                                     <h4 class="media-heading">تماس رایگان</h4>
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
+                                    پسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
@@ -394,7 +395,7 @@
                                 <div class="pull-right"><i class="fa fa-trophy"></i></div>
                                 <div class="media-body">
                                     <h4 class="media-heading">برگشت پول!</h4>
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
+                                   پسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
