--- a/portfolio-4col.html
+++ b/portfolio-4col.html
@@ -301,12 +301,12 @@
         <section class="page-section breadcrumbs">
             <div class="container">
                 <div class="page-header">
-                    <h1>Portfolio</h1>
+                    <h1>نمونه کار</h1>
                 </div>
                 <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li class="active">Portfolio</li>
+                    <li><a href="#">صفحه اصلی</a></li>
+                    <li><a href="#">صفحات</a></li>
+                    <li class="active">نمونه کار</li>
                 </ul>
             </div>
         </section>
@@ -318,10 +318,10 @@
 
                 <div class="clearfix text-center">
                     <ul id="filtrable" class="filtrable clearfix">
-                        <li class="all current"><a href="#" data-filter="*">All</a></li>
-                        <li class="dress"><a href="#" data-filter=".dress">Dresses and Suits</a></li>
-                        <li class="accessories"><a href="#" data-filter=".accessories">Accessories</a></li>
-                        <li class="miscellaneous"><a href="#" data-filter=".miscellaneous">Miscellaneous</a></li>
+                        <li class="all current"><a href="#" data-filter="*">همه</a></li>
+                        <li class="dress"><a href="#" data-filter=".dress">لباس</a></li>
+                        <li class="accessories"><a href="#" data-filter=".accessories">اکسسوری</a></li>
+                        <li class="miscellaneous"><a href="#" data-filter=".miscellaneous">متفرقه</a></li>
                     </ul>
                 </div>
 
@@ -333,8 +333,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 2</a></p>
+                                            <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 2</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -353,8 +353,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 3</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 3</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -373,8 +373,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 4</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 4</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -393,8 +393,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 1</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 1</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -413,8 +413,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 5</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 5</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -433,8 +433,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 7</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 7</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -453,8 +453,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 6</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 6</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -473,8 +473,8 @@
                                 <div class="caption hovered">
                                     <div class="caption-wrapper div-table">
                                         <div class="caption-inner div-cell">
-                                            <h3 class="caption-title">Project Title</h3>
-                                            <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 8</a></p>
+                                            <h3 class="caption-title">عنوان پروژه</h3>
+                                            <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 8</a></p>
                                             <p class="caption-buttons">
                                                 <a href="assets/img/preview/shop/product-1-big.jpg" class="btn caption-zoom" data-gal="prettyPhoto"><i class="fa fa-search"></i></a>
                                                 <a href="portfolio-single.html" class="btn caption-link"><i class="fa fa-link"></i></a>
@@ -491,7 +491,7 @@
                 <div class="pagination-wrapper">
                     <ul class="pagination">
                         <li class="disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                        <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="#">1 <span class="sr-only">(جاری)</span></a></li>
                         <li><a href="#">2</a></li>
                         <li><a href="#">3</a></li>
                         <li><a href="#">4</a></li>
