translate page portfolio-alt.html

--- a/portfolio-alt.html
+++ b/portfolio-alt.html
@@ -301,12 +301,12 @@
         <section class="page-section breadcrumbs">
             <div class="container">
                 <div class="page-header">
-                    <h1>Portfolio</h1>
+                    <h1>نمونه کار</h1>
                 </div>
                 <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li class="active">Portfolio</li>
+                    <li><a href="#">صفحه اصلی</a></li>
+                    <li><a href="#">صفحات</a></li>
+                    <li class="active">نمونه کار</li>
                 </ul>
             </div>
         </section>
@@ -318,10 +318,10 @@
 
                 <div class="clearfix text-center">
                     <ul id="filtrable" class="filtrable clearfix">
-                        <li class="all current"><a href="#" data-filter="*">All</a></li>
-                        <li class="dress"><a href="#" data-filter=".dress">Dresses and Suits</a></li>
-                        <li class="accessories"><a href="#" data-filter=".accessories">Accessories</a></li>
-                        <li class="miscellaneous"><a href="#" data-filter=".miscellaneous">Miscellaneous</a></li>
+                        <li class="all current"><a href="#" data-filter="*">همه</a></li>
+                        <li class="dress"><a href="#" data-filter=".dress">لباس</a></li>
+                        <li class="accessories"><a href="#" data-filter=".accessories">اکسسوری</a></li>
+                        <li class="miscellaneous"><a href="#" data-filter=".miscellaneous">متفرقه</a></li>
                     </ul>
                 </div>
 
@@ -342,8 +342,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 2</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 2</a></p>
                             </div>
                         </div>
                     </div>
@@ -364,8 +364,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 3</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 3</a></p>
                             </div>
                         </div>
                     </div>
@@ -386,8 +386,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 4</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 4</a></p>
                             </div>
                         </div>
                     </div>
@@ -408,8 +408,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 1</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 1</a></p>
                             </div>
                         </div>
                     </div>
@@ -430,8 +430,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 5</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 5</a></p>
                             </div>
                         </div>
                     </div>
@@ -452,8 +452,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 7</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 7</a></p>
                             </div>
                         </div>
                     </div>
@@ -474,8 +474,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 6</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 6</a></p>
                             </div>
                         </div>
                     </div>
@@ -496,8 +496,8 @@
                                 </div>
                             </div>
                             <div class="caption">
-                                <h3 class="caption-title"><a href="#">Project Title</a></h3>
-                                <p class="caption-category"><a href="#">Category</a>, <a href="#">Category 8</a></p>
+                                <h3 class="caption-title"><a href="#">عنوان پروژه</a></h3>
+                                <p class="caption-category"><a href="#">دسته بندی</a>, <a href="#">دسته بندی 8</a></p>
                             </div>
                         </div>
                     </div>
