--- a/error-page.html
+++ b/error-page.html
@@ -27,6 +27,9 @@
     <!-- Head Libs -->
     <script src="assets/plugins/modernizr.custom.js"></script>
 
+    <!-- team change -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
     <!--[if lt IE 9]>
     <script src="assets/plugins/iesupport/html5shiv.js"></script>
     <script src="assets/plugins/iesupport/respond.min.js"></script>
@@ -303,7 +306,7 @@
         <section class="page-section text-center error-page">
             <div class="container">
                 <h3>404</h3>
-                <h2><i class="fa fa-warning"></i>وای! صفحه مورد نظر شما یافت نشد!</h2>
+                <h2 class="rErrorPage"><i class="fa fa-warning"></i>وای! صفحه مورد نظر شما یافت نشد!</h2>
                 <p><a class="btn btn-theme btn-theme-dark" href="index.html">برگشت به صفحه اصلی</a></p>
             </div>
         </section>
