add tag link style.css

--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,9 @@
     <!-- Head Libs -->
     <script src="assets/plugins/modernizr.custom.js"></script>
 
+    <!-- team change -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
     <!--[if lt IE 9]>
     <script src="assets/plugins/iesupport/html5shiv.js"></script>
     <script src="assets/plugins/iesupport/respond.min.js"></script>
