--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- Head Libs -->
     <script src="assets/plugins/modernizr.custom.js"></script>
 
+    <!-- team change -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
     <!--[if lt IE 9]>
     <script src="assets/plugins/iesupport/html5shiv.js"></script>
     <script src="assets/plugins/iesupport/respond.min.js"></script>
@@ -89,15 +92,15 @@
     <!-- Header top bar -->
     <div class="top-bar">
         <div class="container">
-            <div class="top-bar-left">
-                <ul class="list-inline">
+            <div class="top-bar-right">
+                <ul class="list-inline rUlHeader">
                     <li class="icon-user"><a href="login.html"><img src="assets/img/icon-1.png" alt=""/> <span>ورود</span></a></li>
                     <li class="icon-form"><a href="login.html"><img src="assets/img/icon-2.png" alt=""/> <span>عضو نیستید؟<span class="colored">ثبت نام</span></span></a></li>
                     <li><a href="mailto:support@yourdomain.com"><i class="fa fa-envelope"></i> <span>support@yourdomain.com</span></a></li>
                 </ul>
             </div>
-            <div class="top-bar-right">
-                <ul class="list-inline">
+            <div class="top-bar-left">
+                <ul class="list-inline rUlHeader">
                     <li class="hidden-xs"><a href="about.html">درباره</a></li>
                     <li class="hidden-xs"><a href="blog.html">وبلاگ</a></li>
                     <li class="hidden-xs"><a href="contact.html">تماس</a></li>
@@ -163,7 +166,7 @@
                 <!-- Navigation -->
                 <nav class="navigation closed clearfix">
                     <a href="#" class="menu-toggle-close btn"><i class="fa fa-times"></i></a>
-                    <ul class="nav sf-menu">
+                    <ul class="nav sf-menu rUlHeader">
                         <li class="active"><a href="index.html">صفحه اصلی</a>
                             <ul>
                                 <li><a href="index.html">صفحه اصلی 1</a></li>
@@ -1102,10 +1105,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">مشاهده همه</a>
-                            <h4 class="block-title"><span>فروشندگان برتر</span></h4>
+                            <a class="btn btn-theme btn-title-more pull-left" href="#">مشاهده همه</a>
+                            <h4 class="block-title rMarginRightFooter"><span>فروشندگان برتر</span></h4>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-1.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1122,7 +1125,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-2.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1139,7 +1142,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-3.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1159,10 +1162,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">مشاهده همه</a>
-                            <h4 class="block-title"><span>برترین اکسسوری</span></h4>
+                            <a class="btn btn-theme btn-title-more pull-left" href="#">مشاهده همه</a>
+                            <h4 class="block-title rMarginRightFooter"><span>برترین اکسسوری</span></h4>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-4.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1179,7 +1182,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-5.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1196,7 +1199,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-6.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1216,10 +1219,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">مشاهده همه</a>
-                            <h4 class="block-title"><span>جدید ترین</span></h4>
+                            <a class="btn btn-theme btn-title-more pull-left" href="#">مشاهده همه</a>
+                            <h4 class="block-title rMarginRightFooter"><span>جدید ترین</span></h4>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-7.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1236,7 +1239,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-8.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1253,7 +1256,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-right media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-9.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -1322,7 +1325,7 @@
     <!-- /CONTENT AREA -->
 
     <!-- FOOTER -->
-    <footer class="footer">
+    <footer class="footer rfooter">
         <div class="footer-widgets">
             <div class="container">
                 <div class="row">
@@ -1331,7 +1334,7 @@
                         <div class="widget">
                             <h4 class="widget-title">درباره ی ما</h4>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
-                            <ul class="social-icons">
+                            <ul class="social-icons rUlFooter3">
                                 <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li>
@@ -1356,7 +1359,7 @@
                     <div class="col-md-3">
                         <div class="widget widget-categories">
                             <h4 class="widget-title">اطلاعات</h4>
-                            <ul>
+                            <ul class="rUlFooter2">
                                 <li><a href="#">درباره ما</a></li>
                                 <li><a href="#">اطلاعات تحویل</a></li>
                                 <li><a href="#">تما با ما</a></li>
@@ -1368,7 +1371,7 @@
                     <div class="col-md-3">
                         <div class="widget widget-tag-cloud">
                             <h4 class="widget-title">برچسبهای مورد</h4>
-                            <ul>
+                            <ul class="rUlFooter">
                                 <li><a href="#">روش</a></li>
                                 <li><a href="#">شلوار جین</a></li>
                                 <li><a href="#">فروشندگان برتر</a></li>
