--- a/faq.html
+++ b/faq.html
@@ -313,7 +313,7 @@
 
         <!-- PAGE -->
         <section class="page-section color">
-            <div class="container">
+            <div class="container rFaqPageP">
 
                 <p class="lead">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.</p>
 
@@ -322,7 +322,7 @@
                         <div class="panel-heading" role="tab" id="heading1">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true" aria-controls="collapse1">
-                                    <span class="dot"></span> هزینه تحویل برای سفارشات از فروشگاه آنلاین چیست؟
+                                    <span class="dot  rFaqPageSpans"></span> هزینه تحویل برای سفارشات از فروشگاه آنلاین چیست؟
                                 </a>
                             </h4>
                         </div>
@@ -337,7 +337,7 @@
                         <div class="panel-heading" role="tab" id="heading2">
                             <h4 class="panel-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                    <span class="dot"></span> کدام روش پرداخت در فروشگاه آنلاین پذیرفته شده است؟
+                                    <span class="dot rFaqPageSpans"></span> کدام روش پرداخت در فروشگاه آنلاین پذیرفته شده است؟
                                 </a>
                             </h4>
                         </div>
@@ -352,7 +352,7 @@
                         <div class="panel-heading" role="tab" id="heading3">
                             <h4 class="panel-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                    <span class="dot"></span> چه مدت تحویل داده خواهد شد؟
+                                    <span class="dot rFaqPageSpans"></span> چه مدت تحویل داده خواهد شد؟
                                 </a>
                             </h4>
                         </div>
@@ -367,7 +367,7 @@
                         <div class="panel-heading" role="tab" id="heading4">
                             <h4 class="panel-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                    <span class="dot"></span> در فروشگاه آنلاین چقدر امن است؟ آیا داده های من محافظت می شوند؟
+                                    <span class="dot rFaqPageSpans"></span> در فروشگاه آنلاین چقدر امن است؟ آیا داده های من محافظت می شوند؟
                                 </a>
                             </h4>
                         </div>
@@ -382,7 +382,7 @@
                         <div class="panel-heading" role="tab" id="heading5">
                             <h4 class="panel-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                                    <span class="dot"></span> دقیقا پس از سفارش چه اتفاقی می افتد؟
+                                    <span class="dot rFaqPageSpans"></span> دقیقا پس از سفارش چه اتفاقی می افتد؟
                                 </a>
                             </h4>
                         </div>
@@ -397,7 +397,7 @@
                         <div class="panel-heading" role="tab" id="heading6">
                             <h4 class="panel-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                                    <span class="dot"></span> آیا یک فاکتور برای سفارش من دریافت می کنم؟
+                                    <span class="dot rFaqPageSpans"></span> آیا یک فاکتور برای سفارش من دریافت می کنم؟
                                 </a>
                             </h4>
                         </div>
@@ -421,10 +421,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">مشاهده همه</a>
-                            <h4 class="block-title"><span>فروشندگان برتر</span></h4>
+                            <a class="btn btn-theme btn-title-more pull-left" href="#">مشاهده همه</a>
+                            <h4 class="block-title rMarginRightFooter"><span>فروشندگان برتر</span></h4>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-1.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -441,7 +441,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-2.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -458,7 +458,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-3.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -478,10 +478,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">مشاهده همه</a>
-                            <h4 class="block-title"><span>اکسسوری برتر</span></h4>
+                            <a class="btn btn-theme btn-title-more pull-left" href="#">مشاهده همه</a>
+                            <h4 class="block-title rMarginRightFooter"><span>اکسسوری برتر</span></h4>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-4.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -498,7 +498,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-5.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -515,7 +515,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-6.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -535,10 +535,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">مشاهده همه</a>
-                            <h4 class="block-title"><span>جدید ترین</span></h4>
+                            <a class="btn btn-theme btn-title-more pull-left" href="#">مشاهده همه</a>
+                            <h4 class="block-title rMarginRightFooter"><span>جدید ترین</span></h4>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-7.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -555,7 +555,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-8.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
@@ -572,7 +572,7 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <a class="pull-left media-link" href="#">
+                                <a class="pull-left media-link rAFaqPage" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-9.jpg" alt="">
                                     <i class="fa fa-plus"></i>
                                 </a>
