re-change category-list.html

--- a/category-list.html
+++ b/category-list.html
@@ -326,7 +326,7 @@
                         <!-- widget search -->
                         <div class="widget">
                             <div class="widget-search">
-								<button><i class="fa fa-search"></i></button>
+								<button><i class="fa fa-search" style="left: 1.3em;"></i></button>
                                 <input class="form-control" type="text" placeholder="جستوحو" style="direction: rtl;float: right;">
                                 
                             </div>
