--- a/category-right.html
+++ b/category-right.html
@@ -141,8 +141,8 @@
 
                 <!-- Header search -->
                 <div class="header-search">
+					<button><i class="fa fa-search" style="left: 1.3em;"></i></button>
                     <input class="form-control" type="text" placeholder="What are you looking?"/>
-                    <button><i class="fa fa-search"></i></button>
                 </div>
                 <!-- /Header search -->
 
