--- a/category.html
+++ b/category.html
@@ -325,7 +325,7 @@
                         <!-- widget search -->
                         <div class="widget">
                             <div class="widget-search">
-								<button><i class="fa fa-search"></i></button>
+								<button><i class="fa fa-search" style="left: 1.3em;"></i></button>
                                 <input class="form-control" type="text" placeholder="جستوجو" style="display:inline !important; direction:rtl;">
                             </div>
                         </div>
